# cpp_year2016

./: README.md
1_thread_pool_task/: CMakeLists.txt
1_thread_pool_task/include/: thread_pool.h
1_thread_pool_task/source/: thread_pool.cpp
1_thread_pool_task/tests/: thread_pool.cpp
2_promise_future/: CMakeLists.txt
2_promise_future/include/: future.h  promise.h  shared_state.h
2_promise_future/source/: main.cpp
3_flatten/: CMakeLists.txt
3_flatten/include/: flatten.h
3_flatten/source/: main.cpp
3_flatten/tests/: flatten_test.cpp
4_map/: CMakeLists.txt
4_map/include/: map.h
4_map/source/: main.cpp
4_map/tests/: map_test.cpp
5_tuple/: CMakeLists.txt
5_tuple/include/: tuple.h
5_tuple/source/: main.cpp
5_tuple/tests/: tuple_test.cpp
hw1/: thread_pool.cpp  thread_pool.h  thread_pool_tests.cpp  thread_pool_tests.h
hw2/include/: future.h  promise.h  shared_state.h
hw2/tests/: promise_test.cpp
